refactor: add routes and clean up structure
